tests/functional/lang/parse-fail-dup-formals.err.exp
at «stdin»:1:8:
            1| {x, y, x}: x
             |        ^

       error: duplicate formal function argument 'x'
